Agenda listar
backend da agenda com função de listar somente
